@@ -11,18 +11,18 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>9</source>
+                    <target>9</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.5.0</version>
                 <configuration>
-                    <!--<skipTests>false</skipTests>-->
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.3.39</version>
+            <version>6.1.13</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -58,77 +58,10 @@
             <version>1.4.01</version>
         </dependency>
         <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>shark-maven</artifactId>
-            <version>2.0.1</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>xerces</artifactId>
-                    <groupId>xercesImpl</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>xerces</artifactId>
-                    <groupId>xmlParserAPIs</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>xml-apis</artifactId>
-                    <groupId>xml-apis</groupId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkscripting-standard</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkclientutilities-misc</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkinstancepersistence-dods</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkinstancepersistence-dodslayer</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkrepositorypersistence-dods</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharkrepositorypersistence-dodslayer</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>EnhydraShark</groupId>
-            <artifactId>sharklogging-standard</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>TogetherRelationalObjects</groupId>
-            <artifactId>dbmanager</artifactId>
-            <version>7.1-1-professional</version>
-        </dependency>
-        <dependency>
-            <groupId>TogetherApplicationFramework</groupId>
-            <artifactId>eaf-api</artifactId>
-            <version>7.1-1-community</version>
-        </dependency>
-        <dependency>
-            <groupId>TogetherApplicationFramework</groupId>
-            <artifactId>eafconfreader</artifactId>
-            <version>7.1-1-community</version>
+            <groupId>org.joget</groupId>
+            <artifactId>wflow-shark-jakarta</artifactId>
+            <version>${project.version}</version>
+            <classifier>jakarta</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache-extras.beanshell</groupId>
@@ -182,9 +115,9 @@
             <version>4.5.1</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
